# voke

./: .gitignore  CMakeLists.txt  README.md  voke.sublime-project  voke.sublime-workspace
cmake/: properties.cmake  specification.cmake
src/: main.cpp  voke.hpp
src/argument/: argument.cpp  argument.hpp
src/cmd/: cmd.cpp  cmd.hpp
src/cmd/help/: help.cpp  help.hpp
src/cmd/sync/: sync.cpp  sync.hpp
src/cmd/version/: version.cpp  version.hpp
src/io/: args.cpp  args.hpp  git.cpp  git.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  resource.cpp  resource.hpp  shell.cpp  shell.hpp  verbose_level.hpp  vokefile.cpp  vokefile.hpp
src/platform/: git.cpp  git.hpp  os.cpp  os.hpp
src/resource/: compiler.cpp  compiler.hpp  library.cpp  library.hpp  resource.hpp
src/vklang/: vklang.cpp  vklang.hpp
src/vklang/io/: log.hpp
src/vklang/parser/: parser.cpp  parser.hpp  typing.hpp
src/voke/: main.cpp  voke.hpp
src/voke/argument/: argument.cpp  argument.hpp
src/voke/cmd/: cmd.cpp  cmd.hpp
src/voke/cmd/help/: help.cpp  help.hpp
src/voke/cmd/sync/: sync.cpp  sync.hpp
src/voke/cmd/test/: test.cpp  test.hpp
src/voke/cmd/version/: version.cpp  version.hpp
src/voke/io/: memory.cpp  memory.hpp  shell.hpp  verbose_level.cpp  vokefile.cpp
src/voke/platform/: git.cpp  git.hpp  os.cpp  os.hpp
src/voke/resource/: resource.hpp
version/: commit.txt
